# bcbc

./: Cargo.toml
bcbc/: Cargo.toml  bytestr.rs  casting.rs  legacy.rs  lib.rs  reader.rs  tests.rs  typeid.rs  writer.rs
bcs-parser/: Cargo.toml  lib.rs
byte-storage/: Cargo.toml  bytestr.rs  input.rs  lib.rs  marker.rs  output.rs
