[package]
name = "bcbc"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/bcbc"

[lib]
name = "bcbc"
path = "lib.rs"

[dependencies]
foundations = { git = "https://github.com/Berylsoft/foundations", features = [
    "byterepr",

    "error-enum",
    "num-enum",
    "byterepr-macros",
] }

[dev-dependencies]
hex = "*"
hex-literal = "*"
